<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutPause"
    android:padding="70dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pause"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAllCaps="true"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resume"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:id="@+id/Continuer"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Restart"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:id="@+id/RestartPause"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:id="@+id/Quit"/>
</LinearLayout>