<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutPause"
    android:padding="50dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Finish"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:id="@+id/tvFinish"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:id="@+id/Level_suivant"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Restart"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:id="@+id/Restart"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:id="@+id/QuitFinish"/>
</LinearLayout>